style.css
@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap");

:root {
  --Neutral0: hsl(0, 0%, 100%);
  --Neutral300: hsl(252, 6%, 83%);
  --Neutral500: hsl(245, 15%, 58%);
  --Neutral700: hsl(245, 19%, 35%);
  --Neutral900: hsl(248, 70%, 10%);

  --Orange500: hsl(7, 88%, 67%);
  --Orange700: hsl(7, 71%, 60%);
}

* {
  margin: 0;
  box-sizing: border-box;
  padding: 0;
}

.attribution {
  font-size: 11px;
  text-align: center;
  padding: 20px;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

body {
  background-image: url(./assets/images/background-mobile.png);
  background-size: 100vw;
  background-position: center;
  background-repeat: no-repeat;
  font-family: "Inconsolata", monospace;
  color: var(--Neutral0);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  height: 100vh;
  width: 100vw;
}

.pattern-lines,
.circle-pattern {
  position: absolute;
}

.pattern-lines {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  transform: scale(3);
  transform-origin: center center;
}

.squiggly-top {
  position: absolute;
  height: 10%;
  right: 0;
}

.circle-pattern {
  left: -10%;
  top: -5%;
  width: 40%;
  z-index: -10;
}

.squiggly {
  position: absolute;
  width: 50%;
  transform: scale(1.3);
  transform-origin: left center;
  top: 100%;
  z-index: -1;
  left: 0;
}
header h1 {
  font-weight: 900;
  text-align: center;
  font-size: 25px;
}

header p {
  color: var(--Neutral300);
  font-weight: 400;
  text-align: center;
  padding-top: 15px;
  padding-bottom: 35px;
  font-size: 18px;
}

.logo {
  padding: 20px;
  padding-bottom: 40px;
  width: 70%;
  height: auto;
}

#drop-zone {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 120px;
  padding: 1.5em;
  border: 1px dashed var(--Neutral500);
  border-radius: 10px;
  color: hsla(252, 6%, 83%, 0.6);
  cursor: pointer;
  background-color: hsla(245, 19%, 35%, 0.6);
  margin-bottom: 10px;
  backdrop-filter: blur(2px);
}

#drop-zone img {
  background-color: hsla(243, 10%, 36%, 0.65);
  border-radius: 7px;
  padding: 3px;
  height: 40px;
  width: auto;
  margin-bottom: 20px;
  border: 2px solid hsla(243, 10%, 39%, 0.65);
  opacity: 90%;
}

.upload-image #upload-text,
.upload-info p {
  color: var(--Neutral500);
  font-weight: 400;
  text-align: left;
  margin-left: 5px;
}

.upload-image p {
  font-size: 14px;
}

.upload-info p {
  font-size: 10px;
  margin-bottom: 15px;
}

.upload-image h3 {
  color: var(--Neutral0);
  font-weight: 400;
  font-size: 17px;
  margin-bottom: 10px;
}

.upload-info {
  display: flex;
}

.upload-info img {
  height: 13px;
  width: auto;
}

#file-input {
  display: none;
  cursor: pointer;
  width: 100%;
}

form {
  width: 100%;
}

form h3 {
  margin-bottom: 15px;
  font-weight: 400;
  font-size: 15px;
}

form input {
  border-radius: 10px;
  color: hsla(252, 6%, 83%, 0.6);
  cursor: pointer;
  background-color: hsla(245, 19%, 35%, 0.6);
  margin-bottom: 10px;
  backdrop-filter: blur(2px);
  border: 1px solid var(--Neutral500);
  padding: 1em;
  padding-right: 10em;
  width: 100%;
}

#generate-btn {
  background: linear-gradient(hsl(7, 88%, 67%), hsl(7, 71%, 60%));
  padding: 0.6em;
  width: 100%;
  margin-top: 15px;
  margin-bottom: 20px;
  border: none;
  border-radius: 10px;
  color: rgb(62, 0, 62);
  font-family: "Inconsolata", monospace;
  font-weight: 900;
  text-align: center;
  font-size: 20px;
  cursor: pointer;
}

#drop-zone:hover {
  outline: none;
  background-color: hsla(246, 16%, 50%, 0.6);
  transition: ease-in-out 0.2s;
}

#drop-zone:focus {
  border: var(--Neutral700);
}
/*
#drop-zone:before {
  content: " ";
  position: absolute;
  z-index: -1;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  border: 1.5px solid var(--Neutral300);
  border-radius: 10px;
}
*/

#name-error,
#github-error,
#email-error {
  color: red;
  font-weight: 400;
  text-align: left;
  font-size: 13px;
  margin-left: 5px;
  margin-bottom: 10px;
}

#name-error-span,
#github-error-span,
#email-error-span {
  display: flex;
  width: auto;
  height: auto;
  align-items: center;
  display: none;
}

#name-error-span img,
#github-error-span img,
#email-error-span img,
.upload-info-error {
  height: 16px;
  width: auto;
  margin-bottom: 10px;
  filter: invert(28%) sepia(76%) saturate(6916%) hue-rotate(353deg)
    brightness(101%) contrast(128%);
}

.generated-ticket {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.ticket {
  background-image: url("./assets/images/pattern-ticket.svg");
  background-size: 100%;
  background-position: center;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  padding: 15px;
  display: flex;
  flex-direction: row;
  position: relative;
}

.ticket-top-bottom-wrapper {
  display: flex;
}

.generated-ticket h1 {
  font-weight: 900;
  text-align: center;
  font-size: 28px;
}

#congrats-name {
  background-image: linear-gradient(
    to right,
    hsl(7, 88%, 67%),
    hsl(0, 0%, 100%)
  );
  color: transparent;
  background-clip: text;
}

#congrats-email {
  color: var(--Orange500);
}

.generated-ticket-header p {
  color: var(--Neutral300);
  font-weight: 400;
  text-align: center;
  padding-top: 15px;
  padding-bottom: 35px;
  font-size: 20px;
}

.ticket-top {
  display: flex;
  align-items: center;
}

.ticket-top-column {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
  gap: 5px;
}

.ticket-top h2 {
  font-weight: 700;
  font-size: 20px;
}

.ticket-top p {
  color: var(--Neutral300);
  font-weight: 400;
  font-size: 12px;
}

.logo-mark {
  width: 30px;
  height: 30px;
}

#ticket-id {
  color: rgba(105, 105, 105, 0.848);
  font-weight: 700;
  font-size: 25px;
  position: absolute;
  right: -3%;
  top: 50%;
  transform: translateY(-50%) rotate(90deg);
}

.image-btns {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

#remove-btn,
#change-btn {
  background-color: #3d3661;
  border-radius: 7px;
  padding: 5px;
  font-size: 10px;
  border: none;
  color: var(--Neutral500);
  cursor: pointer;
  display: none;
}

#remove-btn {
  text-decoration: underline;
}

.ticket-bottom {
  display: flex;
  margin-top: 25px;
}

.ticket-bottom-column {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.ticket-bottom-column img {
  height: 15px;
}

.github {
  display: flex;
}

#profile-picture {
  height: 45px;
  max-width: 35px;
  margin-right: 10px;
}

#congrats-github {
  color: var(--Neutral500);
  font-size: 13px;
}

@media (min-width: 600px) {
  body {
    background-image: url(./assets/images/background-tablet.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }

  .pattern-lines,
  .circle-pattern {
    max-width: none;
    top: 0;
    left: 0;
  }

  .pattern-lines {
    width: 150%;
  }

  .circle-pattern {
    top: -5%;
    left: -2%;
    width: 15%;
  }

  .squiggly {
    position: absolute;
    width: 70%;
    bottom: -27%;
    z-index: -1;
  }

  form {
    width: 60%;
    max-width: 700px;
  }

  #generate-btn {
    width: 70%;
    margin-top: 20px;
  }
}

@media (min-width: 1280px) {
  body {
    background-image: url(./assets/images/background-desktop.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }

  .pattern-lines {
    width: 200%;
    left: -50%;
  }

  .circle-pattern {
    width: 200%;
    left: -40%;
  }
}

